@@ -1,7 +1,7 @@
-dateMatch <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest"), nomatch=NA, offset=NULL,value=FALSE)
+dateMatch <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest", "stop"), nomatch=NA, offset=NULL,value=FALSE)
     UseMethod("dateMatch")
 
-dateMatch.character <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest"), nomatch=NA, offset=NULL,value=FALSE)
+dateMatch.character <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest", "stop"), nomatch=NA, offset=NULL,value=FALSE)
 {
     x <- NextMethod('dateMatch')
     if (value)
@@ -10,7 +10,7 @@ dateMatch.character <- function(x, table, how=c("NA", "before", "after", "neares
         x
 }
 
-dateMatch.POSIXct <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest"), nomatch=NA, offset=NULL,value=FALSE)
+dateMatch.POSIXct <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest", "stop"), nomatch=NA, offset=NULL,value=FALSE)
 {
     tz <- attr(date, 'tzone')
     x <- NextMethod('dateMatch')
@@ -26,7 +26,7 @@ dateMatch.POSIXct <- function(x, table, how=c("NA", "before", "after", "nearest"
     }
 }
 
-dateMatch.POSIXlt <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest"), nomatch=NA, offset=NULL,value=FALSE)
+dateMatch.POSIXlt <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest", "stop"), nomatch=NA, offset=NULL,value=FALSE)
 {
     tz <- attr(date, 'tzone')
     x <- NextMethod('dateMatch')
@@ -42,16 +42,23 @@ dateMatch.POSIXlt <- function(x, table, how=c("NA", "before", "after", "nearest"
     }
 }
 
-dateMatch.Date <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest"), nomatch=NA, offset=NULL,value=FALSE)
+dateMatch.Date <- function(x, table, how=c("NA", "before", "after", "nearest", "interp"), error.how=c("NA", "drop", "nearest", "stop"), nomatch=NA, offset=NULL,value=FALSE)
 {
-    if (is.null(how))
+    have.error.how <- FALSE
+    if (is.null(how)) {
         how <- "NA"
-    else
+    } else if (is.character(how) && length(strsplit(how, '.', fixed=TRUE)[[1]])>1) {
+        have.error.how <- TRUE
+        error.how <- match.arg(strsplit(how, '.', fixed=TRUE)[[1]][2], c("NA", "drop", "nearest", "stop"))
+        how <- match.arg(strsplit(how, '.', fixed=TRUE)[[1]][1], c("NA", "before", "after", "nearest", "interp"))
+    } else {
         how <- match.arg(how)
-    if (is.null(error.how))
-        error.how <- "NA"
-    else
-        error.how <- match.arg(error.how)
+    }
+    if (!have.error.how)
+        if (is.null(error.how))
+            error.how <- "NA"
+        else
+            error.how <- match.arg(error.how)
 
     # return indices of x in table
     if (!inherits(x, 'Date'))
@@ -81,6 +88,9 @@ dateMatch.Date <- function(x, table, how=c("NA", "before", "after", "nearest", "
 					idx[idxNA] <- nomatch
 				} else if (error.how=='drop'){
 					idx <- idx[!idxNA]
+				} else if (error.how=='stop'){
+                                    stop('no match found for ', sum(idxNA), ' dates, e.g.: ',
+                                         paste(x[which(idxNA)[seq(1,min(3,sum(idxNA)))]], collapse=', '))
 				}
 			}
 		} else if (how=="before"){
@@ -96,6 +106,11 @@ dateMatch.Date <- function(x, table, how=c("NA", "before", "after", "nearest", "
 					idx <- idx[idx>0]
 				} else if (error.how=='nearest') {
 					idx[idx==0] <- 1
+				} else if (error.how=='stop'){
+                                    idxBad <- idx==0
+                                    if (any(idxBad))
+                                        stop('no match found for ', sum(idxBad), ' dates, e.g.: ',
+                                             paste(x[which(idxBad)[seq(1,min(3,sum(idxBad)))]], collapse=', '))
 				}
 			}
 		} else if (how=="after"){
@@ -108,6 +123,11 @@ dateMatch.Date <- function(x, table, how=c("NA", "before", "after", "nearest", "
 					idx <- idx[idx<=N]
 				} else if (error.how=='nearest') {
 					idx[idx>N] <- N
+				} else if (error.how=='stop'){
+                                    idxBad <- idx>N
+                                    if (any(idxBad))
+                                        stop('no match found for ', sum(idxBad), ' dates, e.g.: ',
+                                             paste(x[which(idxBad)[seq(1,min(3,sum(idxBad)))]], collapse=', '))
 				}
 			}
 		} else if (how=="nearest"){
@@ -167,6 +187,11 @@ dateMatch.Date <- function(x, table, how=c("NA", "before", "after", "nearest", "
 				} else if (error.how=='nearest') {
 					idx[idx==-1] <- N
 					idx[idx==0] <- 1
+				} else if (error.how=='stop') {
+                                    idxBad <- idx<1
+                                    if (any(idxBad))
+                                        stop('no match found for ', sum(idxBad), ' dates, e.g.: ',
+                                             paste(x[which(idxBad)[seq(1,min(3,sum(idxBad)))]], collapse=', '))
 				}
 			}
 		}
